--- a/cmd/palette/serve/policy.yaml
+++ b/cmd/palette/serve/policy.yaml
@@ -11,7 +11,7 @@ on_http_request:
             content-type: text/plain
   - name: Block specific bots by user agent
     expressions:
-      - req.user_agent.name in ('ChatGPT-User', 'GPTBot', 'OAI-SearchBot')
+      - req.user_agent.name in ['ChatGPT-User', 'GPTBot', 'OAI-SearchBot']
     actions:
       - type: deny
         config:
